# libstorjshare

./: .gitignore  Doxyfile  Makefile.am  README.md  configure.ac  libstorjshare.pc.in
src/: Makefile.am  daemon.c  storjshare.c  storjshare.h
test/: Makefile.am
